Testing for hooks

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
 	</nav>
 	</header>
 	<div class="hero container_12">
-	<p>Some men just want to watch the world burn</p>
+	<p>Some men just want to watch the world burn!!!</p>
 	<img src="img/hero2.jpg" alt="Villans">
 	</div>
 	<div class="main container_12">
