--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
 		<img src="img/img2.jpg" alt="Batman Returns">
 	</section>
 	<section class="grid_4">
-	<h3>The Dark Knight Rises!</h3>
+	<h3>The Dark Knight Rises</h3>
 		<img src="img/img3.jpg" alt="Dark Knight Rises">
 	</section>
 	</div>
